# know-gate

./: .editorconfig  .env.example  .gitignore  LICENSE  Makefile  README.md  package-lock.json
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2026_06_14_0001_initial_schema.py  2026_06_14_0002_add_source_webhook_fields.py  2026_06_14_0003_add_chunk_fts.py  2026_06_18_0004_fix_naive_datetime_columns.py
backend/app/: __init__.py  celery_app.py  config.py  logging.py  main.py
backend/app/api/: errors.py  middleware.py  pagination.py  responses.py
backend/app/api/v1/: __init__.py  _permissions.py  auth.py  documents.py  feedback.py  groups.py  query.py  roles.py  settings.py  sources.py  sync_jobs.py  users.py  webhooks.py
backend/app/audit/: __init__.py  log.py  middleware.py
backend/app/auth/: __init__.py  jwt.py  magic_link.py  oauth.py  password.py  permissions.py
backend/app/cache/: __init__.py  client.py  helpers.py  keys.py
backend/app/crypto/: aes.py
backend/app/db/: __init__.py  enums.py  init.py  session.py
backend/app/llm/: __init__.py  circuit_breaker.py  client.py  prompts.py
backend/app/middleware/: __init__.py  trace_id.py
backend/app/observability/: __init__.py  metrics.py  tracing.py
backend/app/pipeline/: __init__.py  chunker.py  embedder.py  indexer.py  lang_detect.py  parser.py  tokenizer.py
backend/app/retrieval/: __init__.py  answer_generator.py  cache.py  citation_builder.py  hybrid_search.py  no_result.py  pipeline.py  query_embedder.py  reranker.py
backend/app/services/: __init__.py  email.py
backend/app/sources/: __init__.py  base.py  google_drive.py  notion.py  progress.py  sync.py
backend/app/storage/: __init__.py  buckets.py  client.py  uploader.py
backend/app/tasks/: __init__.py  beat_schedule.py  ingest.py  sync.py
backend/app/vector/: __init__.py  client.py  collections.py  indexer.py  payload_schema.py
backend/scripts/: __init__.py  init.py  init_helpers.py  load_bge_model.py  seed.py
backend/tests/: __init__.py  conftest.py  test_health.py
backend/tests/api/: test_documents.py  test_groups.py  test_responses.py  test_roles.py  test_settings.py  test_sync_jobs.py  test_users.py
backend/tests/auth/: conftest.py  test_audit.py  test_auth_endpoints.py  test_crypto.py  test_jwt.py  test_password.py  test_permissions.py
backend/tests/observability/: __init__.py  test_logging.py  test_metrics.py  test_tracing.py
backend/tests/pipeline/: conftest.py  test_chunker.py  test_embedder.py  test_indexer.py  test_ingest_task.py  test_lang_detect.py  test_parser.py  test_tokenizer.py  test_vector_indexer.py
backend/tests/retrieval/: conftest.py  test_circuit_breaker.py  test_citation_builder.py  test_llm_client.py  test_no_result.py  test_pipeline.py  test_prompts.py  test_query_embedder.py  test_rrf.py
backend/tests/sources/: conftest.py  test_base.py  test_google_drive.py  test_notion.py  test_progress.py  test_sync.py  test_webhook.py
cli/: pyproject.toml
cli/knowgate_cli/: __init__.py  auth.py  client.py  config.py  main.py  output.py  query.py  source.py  user.py
cli/tests/: conftest.py  test_auth.py  test_client.py  test_config.py  test_main.py  test_query.py  test_source.py  test_user.py
deploy/: docker-compose.dev.yml  docker-compose.yml
deploy/grafana/dashboards/: api-overview.json  db.json  llm-usage.json  sync-jobs.json  worker.json
deploy/grafana/provisioning/: dashboards.yml  datasources.yml
deploy/helm/knowgate/: Chart.yaml  README.md  values.schema.json  values.yaml
deploy/helm/knowgate/charts/: .gitkeep
deploy/helm/knowgate/templates/: _helpers.tpl  api-deployment.yaml  backup-cronjob.yaml  beat-deployment.yaml  ingress.yaml  litellm-deployment.yaml  networkpolicy.yaml  sealed-secrets.example.yaml  servicemonitor.yaml  worker-deployment.yaml
deploy/litellm/: config.yaml
deploy/loki/: loki-config.yml
deploy/prometheus/: alertmanager-entrypoint.sh  alertmanager.yml.tmpl  alerts.yml  prometheus.yml
deploy/promtail/: promtail.yml
docs/: code-standards.md  codebase-summary.md  deployment-guide.md  project-changelog.md  project-overview-pdr.md  system-architecture.md
docs/api/: error-codes.md
frontend/: .dockerignore  .eslintrc.json  Dockerfile  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/admin/audit-log/: audit-list.tsx  page.tsx
frontend/app/(app)/admin/documents/: documents-table.tsx  page.tsx
frontend/app/(app)/admin/groups/: groups-table.tsx  page.tsx
frontend/app/(app)/admin/roles/: page.tsx  roles-table.tsx
frontend/app/(app)/dashboard/: dashboard-widgets.tsx  page.tsx
frontend/app/(app)/query/: page.tsx  query-workspace.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(auth)/login/: login-form.tsx  page.tsx
frontend/components/: app-shell.tsx  citation-card.tsx  empty-state.tsx  feedback-buttons.tsx  filter-sidebar.tsx  lang-switcher.tsx  role-gate.tsx  user-provider.tsx
frontend/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  label.tsx  separator.tsx  skeleton.tsx
frontend/i18n/: config.ts  request.ts
frontend/lib/: api-client.ts  api-types.ts  api.ts  auth-actions.ts  auth-cookies.ts  auth.ts  utils.ts
frontend/messages/: en.json  vi.json
(+10 files in other folders)
