[project]
name = "knowgate-backend"
version = "0.1.0"
description = "KnowGate MVP - FastAPI backend (RAG, multilingual, permission-aware)"
readme = "../README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [
    { name = "KnowGate Team" }
]

dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
    # Validation
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    # ORM + DB
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",  # for Alembic sync migrations
    # Auth
    "PyJWT[crypto]>=2.9.0",
    "authlib>=1.3.2",
    "argon2-cffi>=23.1.0",
    "itsdangerous>=2.2.0",
    # HTTP + Email
    "httpx>=0.28.0",
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.4",
    # Cache + Queue
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    # Vector DB
    "qdrant-client>=1.12.0",
    # Object storage
    "boto3>=1.35.0",
    # Embedding (bge-m3) + parsing
    "sentence-transformers>=3.2.0",
    "torch>=2.5.0",
    "unstructured[all-docs]>=0.16.0",
    "tiktoken>=0.8.0",
    "langdetect>=1.0.9",
    # Observability
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    "opentelemetry-api>=1.28.0",
    "opentelemetry-sdk>=1.28.0",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28.0",
    # Utility
    "python-slugify>=8.0.0",
    "orjson>=3.10.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "faker>=30.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "B008",  # do not perform function calls in argument defaults
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "B011"]
"scripts/*" = ["T201"]
# i18n prose uses full-width punctuation in vi/en/zh message strings
"app/retrieval/no_result.py" = ["RUF001"]
# fire-and-forget audit log tasks are intentional (best-effort)
"app/retrieval/pipeline.py" = ["RUF006"]
"app/audit/log.py" = ["RUF006"]
"app/api/v1/feedback.py" = ["RUF006"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=80",
]
